force-app/main/default/objects/vf_BurnoutAssessment__c/vf_BurnoutAssessment__c.object-meta.xml
<CustomObject>
    <label>Burnout Assessment</label>
    <pluralLabel>Burnout Assessments</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Assessment Number</label>
        <displayFormat>BA-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to track volunteer burnout risk assessments</description>
</CustomObject>