force-app/main/default/objects/vf_BurnoutAssessment__c/fields/Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date__c</fullName>
    <label>Assessment Date</label>
    <type>Date</type>
    <description>Date the burnout assessment was performed</description>
    <inlineHelpText>The date when this burnout assessment was performed</inlineHelpText>
</CustomField>