force-app/main/default/objects/vf_BurnoutAssessment__c/fields/Engagement_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Metrics__c</fullName>
    <label>Engagement Metrics</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON object of engagement metrics used for the assessment</description>
    <inlineHelpText>Engagement metrics used for this burnout assessment. Stored in JSON format.</inlineHelpText>
</CustomField>