force-app/main/default/objects/vf_BurnoutAssessment__c/fields/Recommended_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Strategies__c</fullName>
    <label>Recommended Strategies</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of recommended strategies to mitigate burnout risk</description>
    <inlineHelpText>List of recommended strategies to mitigate burnout risk. Stored in JSON format.</inlineHelpText>
</CustomField>