force-app/main/default/objects/vf_BurnoutAssessment__c/fields/Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factors__c</fullName>
    <label>Risk Factors</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of identified burnout risk factors</description>
    <inlineHelpText>List of identified burnout risk factors. Stored in JSON format.</inlineHelpText>
</CustomField>