force-app/main/default/objects/vf_BurnoutAssessment__c/fields/Risk_Probability__c.field-meta.xml
<CustomField>
    <fullName>Risk_Probability__c</fullName>
    <label>Risk Probability</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <description>Calculated probability of burnout risk (0-1)</description>
    <inlineHelpText>The calculated probability of burnout risk (0-1)</inlineHelpText>
</CustomField>