force-app/main/default/objects/vf_BurnoutAssessment__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>vf_Volunteer__c</referenceTo>
    <relationshipLabel>Burnout Assessments</relationshipLabel>
    <relationshipName>Burnout_Assessments</relationshipName>
    <type>Lookup</type>
    <description>Volunteer being assessed for burnout</description>
    <inlineHelpText>The volunteer assessed for burnout risk</inlineHelpText>
</CustomField>